--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
               gradle build
          - uses: actions/upload-artifact@v4
            with:
-              name: goofyenchants-mod
-              path: goofyenchants-mod/build/libs/*[0-9].jar
+              name: GoofyEnchants
+              path: GoofyEnchants/build/libs/*.jar
 
            
