--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
               gradle build
          - uses: actions/upload-artifact@v4
            with:
-              name: GoofyEnchants
-              path: GoofyEnchants/build/libs/*.jar
+              name: goofyenchants
+              path: build/libs/*.jar
 
            
