--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ org.gradle.daemon=false
 
 ## Environment Properties
 jei_version=15.8.0.14
+pehkui_version=3.8.0-1.20.1-forge
 # The Minecraft version must agree with the Forge version to get a valid artifact
 minecraft_version=1.20.1
 # The Minecraft version range can use any release version of Minecraft as bounds.
