--- a/build.gradle
+++ b/build.gradle
@@ -167,6 +167,8 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:ImmediatelyFast-686911:5425036")
     //ModernFix
     runtimeOnly fg.deobf("curse.maven:ModernFix-790626:5569652")
+    //Spark
+    runtimeOnly fg.deobf("curse.maven:Spark-361579:4738952")
 
     // Example mod dependency using a mod jar from ./libs with a flat dir repository
     // This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
